--- a/styles/base.css
+++ b/styles/base.css
@@ -1,17 +1,33 @@
 body{
-  
+  font-family: 'Raleway', sans-serif;
   margin: 0 auto;
 }
+strong {
+  font-weight: bold;
+}
 header{
-  background-color:rgb(211, 206, 206);  
+  background-color:rgb(161, 255, 155);  
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 h1 a{
   color:black;
   text-decoration: none;
+  
+  
+}
+#logo{
+  font-size: 7vw;
 }
 li a{
   color:black;
   text-decoration: none;
+}
+nav li {
+font-size:5vw;
+}
+div {
+  padding:4%;
 }
 #map {
   width: 100%;
