--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,5 +1,15 @@
-@media screen and (min-width: 540px){
+@media screen and (min-width: 640px){
 
-  #map {width:70%;
+  #map {width:80%;
+  }
+  #logo{
+    font-size: 40px;
+  }
+  nav li {
+
+    font-size:25px;
+    }
+  div {
+    padding:20px;
   }
 }
