--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,7 @@
 body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
+
 }
 strong {
   font-weight: bold;
@@ -9,12 +10,32 @@ header{
   background-color:rgb(161, 255, 155);  
   padding-top: 2%;
   padding-bottom: 2%;
+  margin-bottom:2%;
 }
 h1 a{
   color:black;
-  text-decoration: none;
-  
-  
+  text-decoration: none;  
+}
+input {
+  width: 70%;
+  margin-bottom: 5vw;
+  padding: 2vw;
+  margin-left:6vw;
+  border-radius: 6px;
+  font-size: 100%;
+  color:grey;
+  border: grey 2px solid;
+}
+button{
+  width: 30%;
+  margin-bottom: 5vw;
+  padding: 2vw;
+  margin-left:6vw;
+  border-radius: 6px;
+  font-size: 100%;
+  color:grey;
+  border: grey 2px solid;
+
 }
 #logo{
   font-size: 7vw;
@@ -33,5 +54,11 @@ div {
   width: 100%;
   height: 400px;
   width: 90%;
-  margin: 0 auto;
+  margin:0 auto;
+}
+#activity-filter{
+  width:30%;
+  max-height:15%;
+  font-size: 120%;
+
 }
