--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,9 +3,7 @@ body{
 }
 header {
   width: 100%;
-  /* position: fixed;
-  overflow: hidden; */
- 
+
 }
 nav li{
   display:inline;
@@ -24,15 +22,19 @@ h2 {
   margin-right: 10%;
 }
 
-#topImage {
-  margin-top: 5%;
+.topImage {
+  margin-top: 120px;
   margin-right: 10%;
-  border-radius: 3px;
+  border-radius: 10px; 
   border-top-left-radius: 10px;
 }
 
-div #topImage {
-  margin-top: 120px;
-  border-radius: 3px;
-  border-top-left-radius: 10px;
+
+img{
+  border-radius: 6px;
+  display:block;
+}
+
+form{
+  width:100%;
 }
