--- a/styles/modules.css
+++ b/styles/modules.css
@@ -12,4 +12,18 @@
   div {
     padding:20px;
   }
+  #submit {
+    width: 20%;
+    padding: 20px;
+
+  }
+  input{
+    width: 50%;
+    padding: 20px;
+    text-align:center;
+  }
+  header{
+    padding-left:15px;
+  }
+ 
 }
