--- a/styles/base.css
+++ b/styles/base.css
@@ -25,7 +25,9 @@ input {
   font-size: 100%;
   color:grey;
   border: grey 2px solid;
+  text-align:center;
 }
+
 button{
   width: 30%;
   margin-bottom: 5vw;
@@ -50,6 +52,9 @@ font-size:5vw;
 div {
   padding:4%;
 }
+#activities input{
+  width:5%;
+ }
 #map {
   width: 100%;
   height: 400px;
@@ -61,4 +66,7 @@ div {
   max-height:15%;
   font-size: 120%;
 
+}
+#activities {
+  margin-left: 6vw;
 }
