--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,12 @@ body{
   margin: 0 auto;
 
 }
+h2{
+  padding:5%;
+}
+p{
+  line-height: 25px;
+}
 strong {
   font-weight: bold;
 }
@@ -12,10 +18,15 @@ header{
   padding-bottom: 2%;
   margin-bottom:2%;
 }
-h1 a{
+a{
   color:black;
-  text-decoration: none;  
+  text-decoration: none; 
+  
 }
+p a{ 
+  font-weight:bold;
+}
+ 
 input {
   width: 70%;
   margin-bottom: 5vw;
@@ -70,3 +81,16 @@ div {
 #activities {
   margin-left: 6vw;
 }
+footer div{
+  background-color:rgb(161, 255, 155);
+  text-align: center;
+  margin-top: 10%;
+  height: 10%;
+
+}
+#hero-image {
+  width:100%;
+  margin-bottom: 10%;
+  border-radius:0;
+}
+
