--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,6 +3,7 @@ body{
 }
 header {
   width: 100%;
+  height:200px;
 
 }
 nav li{
@@ -28,11 +29,18 @@ h2 {
   border-radius: 10px; 
   border-top-left-radius: 10px;
 }
-
+#header-nav{
+  margin-top:5%;
+  margin-left:20%;
+}
 
 img{
   border-radius: 6px;
   display:block;
+}
+#logo{
+  float:left;
+  margin-right: 0;
 }
 
 form{
