--- a/styles/base.css
+++ b/styles/base.css
@@ -6,9 +6,9 @@ body{
 h2{
   padding:5%;
 }
-p{
+/* p{
   line-height: 25px;
-}
+} */
 strong {
   font-weight: bold;
 }
@@ -61,9 +61,9 @@ nav li {
 font-size:5vw;
 }
 
-div {
+/* div {
   padding:4%;
-}
+} */
 
 #activities input{
   width:5%;
