--- a/styles/base.css
+++ b/styles/base.css
@@ -6,6 +6,8 @@ body{
 #header-nav h1{
   padding-bottom:40px;
   font-size:4vw;
+  font-family: 'Love Ya Like A Sister', cursive;
+  
 }
 h2{
   padding:5%;
