--- a/styles/base.css
+++ b/styles/base.css
@@ -6,20 +6,21 @@ body{
 #header-nav h1{
   padding-bottom:40px;
   font-size:4vw;
+}
+#header-nav {
   font-family: 'Love Ya Like A Sister', cursive;
-  
 }
 h2{
   padding:5%;
 }
-/* p{
+ .bio {
   line-height: 25px;
-} */
+}
 strong {
   font-weight: bold;
 }
 header{
-  background-color:rgb(161, 255, 155);  
+  background-color:rgb(210, 250, 206);  
   padding-top: 2%;
   padding-bottom: 2%;
   margin-bottom:2%;
@@ -64,11 +65,11 @@ li a{
   text-decoration: none;
 }
 nav li {
-font-size:6vw;
+font-size:4vw;
 }
 
 
-div {
+footer div {
   padding:4%;
 }
 
@@ -92,7 +93,7 @@ div {
   margin-left: 6vw;
 }
 footer div{
-  background-color:rgb(161, 255, 155);
+  background-color:rgb(210, 250, 206);
   text-align: center;
   margin-top: 10%;
   height: 10%;
