--- a/styles/layout.css
+++ b/styles/layout.css
@@ -8,7 +8,8 @@ header {
 }
 nav li{
   display:inline;
-  padding-right:4%;
+  padding-top: 50px;
+  padding-right: 40px;
 }
 h2 {
   font-weight: bold;
@@ -30,8 +31,8 @@ h2 {
   border-top-left-radius: 10px;
 }
 #header-nav{
-  margin-top:2%;
-  margin-left:20%;
+  
+  margin-left:20px;
 }
 
 img{
