--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,8 @@ body{
 }
 #header-nav h1{
   padding-bottom:40px;
-  font-size:4vw;
+  font-size:5vh;
+  padding-top:40px;
 }
 #header-nav {
   font-family: 'Love Ya Like A Sister', cursive;
@@ -14,7 +15,11 @@ h2{
   padding:5%;
 }
  .bio {
-  line-height: 25px;
+  line-height: 28px;
+  
+}
+.template-d{
+  padding-bottom:3%;
 }
 strong {
   font-weight: bold;
@@ -37,7 +42,7 @@ p a{
 input {
   width: 70%;
   margin-bottom: 5vw;
-  padding: 2vw;
+  padding: 2vh;
   margin-left:6vw;
   border-radius: 6px;
   font-size: 100%;
@@ -55,17 +60,18 @@ button{
   font-size: 100%;
   color:grey;
   border: grey 2px solid;
-
 }
 #logo{
   font-size: 7vw;
 }
+
 li a{
   color:black;
   text-decoration: none;
 }
+
 nav li {
-font-size:4vw;
+font-size:4vh;
 }
 
 
@@ -77,28 +83,31 @@ footer div {
 #activities input{
   width:5%;
  }
+
 #map {
   width: 100%;
   height: 400px;
   width: 90%;
   margin:0 auto;
 }
+
 #activity-filter{
   width:30%;
   max-height:15%;
   font-size: 120%;
-
 }
+
 #activities {
   margin-left: 6vw;
 }
+
 footer div{
   background-color:rgb(210, 250, 206);
   text-align: center;
   margin-top: 10%;
   height: 10%;
-
 }
+
 #hero-image {
   width:100%;
   margin-bottom: 10%;
