--- a/styles/base.css
+++ b/styles/base.css
@@ -30,12 +30,11 @@ header{
   background-color:rgb(210, 250, 206);  
   padding-top: 2%;
   padding-bottom: 2%;
-  margin-bottom:2%;
+  /* margin-bottom:2%; */
 }
 a{
   color:black;
-  text-decoration: none; 
-  
+  text-decoration: none;   
 }
 p a{ 
   font-weight:bold;
@@ -106,11 +105,8 @@ footer div{
   background-color:rgb(210, 250, 206);
   text-align: center;
   margin-top: 10%;
-
-  height: 10%;.
+  height: 10%;
   padding: 2%
-
-
 }
 
 #hero-image {
