--- a/styles/layout.css
+++ b/styles/layout.css
@@ -23,14 +23,13 @@ h2 {
   margin-right: 10%;
 }
 
-.topImage {
+.bioImage {
   margin-top: 120px;
   margin-right: 10%;
   border-radius: 10px; 
   border-top-left-radius: 10px;
 }
 #header-nav{
-  
   margin-left:20px;
 }
 
