--- a/styles/base.css
+++ b/styles/base.css
@@ -17,12 +17,8 @@ h2{
   padding:5%;
 }
 
- .bio {
-  line-height: 28px;
-  
-}
-.template-d{
-  padding-bottom:3%;
+.bio {
+  line-height: 28px;  
 }
 
 strong {
@@ -32,7 +28,6 @@ header{
   background-color:rgb(210, 250, 206);  
   padding-top: 2%;
   padding-bottom: 2%;
-  /* margin-bottom:2%; */
 }
 a{
   color:black;
@@ -77,7 +72,6 @@ nav li {
 font-size:4vh;
 }
 
-
 footer div {
   padding:4%;
 }
@@ -101,6 +95,10 @@ footer div {
 
 #activities {
   margin-left: 6vw;
+}
+h2 {
+  font-weight: bold;
+  font-size: 25px;
 }
 
 footer div{
