--- a/styles/layout.css
+++ b/styles/layout.css
@@ -4,15 +4,15 @@ body{
 header {
   width: 100%;
   height:200px;
-
+}
+.template-d {
+  padding-bottom:3%;
 }
 nav li{
   display:inline;
-  padding-right: 40px;
+  padding-right: 20px;
 }
 h2 {
-  font-weight: bold;
-  font-size: 25px;
   display: inline-block;
   margin-left: 0px;
   margin-top: 15px;
@@ -24,10 +24,10 @@ h2 {
 }
 
 .bioImage {
-  margin-top: 120px;
   margin-right: 10%;
   border-radius: 10px; 
   border-top-left-radius: 10px;
+  margin-top:2%
 }
 #header-nav{
   margin-left:20px;
