--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,9 @@
 body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
+  background-image: url('/img/leaves_tile.jpg');
 }
+
 
 #header-nav h1{
   padding-bottom:40px;
@@ -12,7 +14,13 @@ body{
 #header-nav {
   font-family: 'Love Ya Like A Sister', cursive;
 }
-
+#filter {
+  border: 2px grey solid ;
+  border-radius: 6px;
+  background-color: #D6FFD4;
+  padding:5px;
+  width:70%
+}
 h2{
   padding:5%;
 }
@@ -25,7 +33,7 @@ strong {
   font-weight: bold;
 }
 header{
-  background-color:rgb(210, 250, 206);  
+  background-color:#D6FFD4;  
   padding-top: 2%;
   padding-bottom: 2%;
 }
@@ -41,7 +49,7 @@ input {
   width: 70%;
   margin-bottom: 5vw;
   padding: 2vh;
-  margin-left:6vw;
+  margin-left: 6vw;
   border-radius: 6px;
   font-size: 100%;
   color:grey;
@@ -91,6 +99,7 @@ footer div {
   width:30%;
   max-height:15%;
   font-size: 120%;
+ 
 }
 
 #activities {
