--- a/styles/base.css
+++ b/styles/base.css
@@ -2,6 +2,7 @@ body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
   background-image: url('/img/leaves_tile.jpg');
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 70%), url('/img/leaves_tile.jpg');
 }
 
 
@@ -57,10 +58,19 @@ input {
   text-align:center;
 }
 
+#autoDiv {
+  text-align: center;
+}
+
+#activities {
+  text-align: center;
+}
+
 button{
   width: 30%;
   margin-bottom: 5vw;
   padding: 2vw;
+  margin-top: 2em;
   margin-left: 6vw;
   border-radius: 6px;
   font-size: 100%;
@@ -90,7 +100,7 @@ footer div {
 
 #map {
   width: 100%;
-  height: 400px;
+  height: 600px;
   width: 90%;
   margin:0 auto;
 }
