--- a/styles/base.css
+++ b/styles/base.css
@@ -15,6 +15,7 @@ body{
 #header-nav {
   font-family: 'Love Ya Like A Sister', cursive;
 }
+
 #filter {
   border: 2px grey solid ;
   border-radius: 6px;
@@ -42,6 +43,7 @@ a{
   color:black;
   text-decoration: none;   
 }
+
 p a{ 
   font-weight:bold;
 }
@@ -64,12 +66,11 @@ input {
 
 #activities {
   text-align: center;
+  margin-bottom: 2em;
 }
 
 button{
   width: 30%;
-  margin-bottom: 5vw;
-  padding: 2vw;
   margin-top: 2em;
   margin-left: 6vw;
   border-radius: 6px;
@@ -112,9 +113,10 @@ footer div {
  
 }
 
-#activities {
-  margin-left: 6vw;
+ul {
+  margin: 0px auto;
 }
+
 h2 {
   font-weight: bold;
   font-size: 25px;
@@ -130,7 +132,7 @@ footer div{
 
 #hero-image {
   width:100%;
-  margin-bottom: 10%;
+  margin-bottom: 4%;
   border-radius:0;
 }
 
