--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,8 @@
 body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
-  
+  background-image: url('/img/leaves_tile.jpg');
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 70%), url('/img/leaves_tile.jpg');
 }
 
 
@@ -12,7 +13,10 @@ body{
 }
 
 #header-nav {
-  font-family: 'Love Ya Like A Sister', cursive;
+  font-family: 'Love Ya Like A Sister', cursive, 'Comic Sans';
+}
+#references {
+  line-height: 28px;
 }
 #filter {
   border: 2px grey solid ;
