--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
-  background-image: url('/img/leaves_tile.jpg');
+  background-image: url('../img/leaves_tile.jpg');
   background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 70%), url('/img/leaves_tile.jpg');
 }
 
