--- a/styles/modules.css
+++ b/styles/modules.css
@@ -37,7 +37,7 @@
     display:inline-block;
     font-size:35px;
     padding-right: 4vw;
-    /* padding-bottom: 2vh; */
+    padding-bottom: 2vh;
   }
 
   #submit {
