--- a/styles/base.css
+++ b/styles/base.css
@@ -2,8 +2,8 @@ body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
 
-  background-image: url('img/leaves_tile.jpg');
-  background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 70%), url('img/leaves_tile.jpg');
+  background-image: url('https://final-project-301.github.io/client-side/img/leaves_tile.jpg');
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 70%), url('https://final-project-301.github.io/client-side/img/leaves_tile.jpg');
 
 }
 
