--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,8 @@ body{
   margin: 0 auto;
 
   background-image: url('https://final-project-301.github.io/client-side/img/leaves_tile.jpg');
-  background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 40%), url('https://final-project-301.github.io/client-side/img/leaves_tile.jpg');
+  /* background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.6) 40%), url('https://final-project-301.github.io/client-side/img/leaves_tile.jpg'); */
+  background-image: opacity(0.4), url('https://final-project-301.github.io/client-side/img/leaves_tile.jpg');
 
 }
 
